bynkc/tests/fixtures/positive/54_opaque_basic/input.bynk
commons opacity.basic {
  type UserId = opaque Int

  fn UserId.fromInt(n: Int) -> UserId {
    UserId.unsafe(n)
  }
}
