bynkc/tests/fixtures/negative/44_opaque_base_access_outside/src/lib/main.bynk
commons lib

type Token = opaque String

fn Token.fromString(s: String) -> Token {
  Token.unsafe(s)
}
